NetBSD Problem Report #1308

From gnats  Wed Aug  2 09:30:57 1995
Received: from falcon.dol-esa.gov (falcon.dol-esa.gov [204.4.3.2]) by sun-lamp.pc.cs.cmu.edu (8.6.11/8.6.10) with SMTP id JAA18224 for <gnats-bugs@gnats.netbsd.org>; Wed, 2 Aug 1995 09:30:56 -0400
Message-Id: <199508021330.JAA04554@owl.dol-esa.gov>
Date: Wed, 2 Aug 1995 09:30:52 -0400
From: Kenneth Stailey <kstailey@owl.dol-esa.gov>
Reply-To: kstailey@owl.dol-esa.gov
To: gnats-bugs@gnats.netbsd.org
Subject: NFS panics in lease code if NFSSERVER but not NFSCLIENT
X-Send-Pr-Version: 3.2

>Number:         1308
>Category:       kern
>Synopsis:       NFS panics in lease code if NFSSERVER but not NFSCLIENT
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 02 09:35:03 +0000 1995
>Closed-Date:    Tue Dec 03 00:22:37 +0000 1996
>Last-Modified:  Tue Dec 03 00:23:00 +0000 1996
>Originator:     Kenneth Stailey
>Release:        Sun July 30, 1995
>Organization:
Department of Labor, Employee Standards Administration, Division of Automated Systems Management

>Environment:

System: NetBSD owl 1.0A NetBSD 1.0A (OWL) #6: Fri Jul 21 09:33:23 EDT 1995 kstailey@owl:/usr/src/sys/arch/i386/compile/OWL i386


>Description:
	NFS panics on first(?) user-space read opertation in lease code
	if NFSSERVER is defined, but not NFSCLIENT
>How-To-Repeat:
	Build a kernel with "options NFSSERVER" but not "options NFSCLIENT".
	Try to boot from it, you will end up in debugger.
>Fix:

	Beats me.
>Release-Note:
>Audit-Trail:

From: Jason Thorpe <thorpej@nas.nasa.gov>
To: gnats-bugs@gnats.netbsd.org
Cc:  Subject: Re: kern/1308
Date: Sat, 13 Jan 1996 22:45:02 -0800

 Cross-reference kern/1780.

 --------------------------------------------------------------------------
 Jason R. Thorpe                                       thorpej@nas.nasa.gov
 NASA Ames Research Center                               Home: 408.866.1912
 NAS: M/S 258-6                                          Work: 415.604.0935
 Moffett Field, CA 94035                                Pager: 415.428.6939
State-Changed-From-To: open->analyzed 
State-Changed-By: thorpej 
State-Changed-When: Sat Nov 30 17:35:17 PST 1996 
State-Changed-Why:  
Have solicited an opinion from fvdl@netbsd.org. 
State-Changed-From-To: analyzed->closed 
State-Changed-By: thorpej 
State-Changed-When: Mon Dec 2 16:22:37 PST 1996 
State-Changed-Why:  
Fixed. 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.